@@ -1,6 +1,7 @@
 0.17.2
  - fix: check for existence of DC resources before starting uploads (#85)
  - enh: sort resources according to internal basin dependencies (#79)
+ - enh: warn user about too many resources in a dataset (#86)
  - ref: use more f-strings
  - ref: add `common.is_dc_file` for consistent resource checks
 0.17.1
